# ferro-protect

./: .env.example  .gitignore  .gitmodules  AGENT.md  ARCHITECTURE.md  Cargo.toml  LICENSE.md  PLAN.md  PROGRESS.md  README.md  UPGRADING.md  deny.toml
.claude/agents/: Explore.md
.github/workflows/: ci.yml
crates/ferro-protect/: Cargo.toml  build.rs
crates/ferro-protect-cli/: Cargo.toml
crates/ferro-protect-cli/src/: api_key.rs  config.rs  lib.rs  logging.rs  main.rs  output.rs
crates/ferro-protect-cli/src/commands/: cameras.rs  chimes.rs  config.rs  lights.rs  liveviews.rs  mod.rs  nvrs.rs  sensors.rs  viewers.rs
crates/ferro-protect-cli/tests/: api_key.rs  cameras.rs  chimes.rs  cli_config.rs  info.rs  lights.rs  liveviews.rs  logging.rs  nvrs.rs  sensors.rs  viewers.rs
crates/ferro-protect-cli/tests/common/: mod.rs
crates/ferro-protect/build_support/: spec_rewrite.rs
crates/ferro-protect/src/: auth.rs  cameras.rs  chimes.rs  client.rs  error.rs  generated.rs  lib.rs  lights.rs  liveviews.rs  models.rs  nvrs.rs  rate_limit.rs  retry.rs  sensors.rs  viewers.rs
crates/ferro-protect/tests/: cameras.rs  chimes.rs  info.rs  lights.rs  live.rs  liveviews.rs  model_codegen.rs  nvrs.rs  rate_limit.rs  sensors.rs  spec_rewrite_snapshot.rs  viewers.rs
crates/ferro-protect/tests/common/: mod.rs
crates/ferro-protect/tests/fixtures/: camera_not_found.json  chime_not_found.json  info_ok.json  info_unauthorized.json  light_not_found.json  liveview_not_found.json  nvr_ok.json  sensor_not_found.json  viewer_not_found.json
crates/ferro-protect/tests/snapshots/: spec_rewrite_snapshot__rewrite_output_matches_snapshot.snap
docs/: TASK_SNAPSHOT.md  TASK_cli_output.md  TASK_config_file.md  TASK_edition_2024.md  TASK_oas3_migration.md  TASK_rate_limit.md
scripts/: live-test  pre-commit  update-spec
