[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/lawliet89/ferro-protect"
authors = ["Yong Wen Chua"]

[workspace.dependencies]
tokio = { version = "1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
url = "2"
secrecy = "0.10"
futures-util = "0.3"
futures-core = "0.3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
progenitor = "0.10"
progenitor-client = "0.10"
openapiv3 = "2"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
is-terminal = "0.4"
insta = { version = "1", features = ["json"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
