[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/lawliet89/ferro-protect"
authors = ["Yong Wen Chua"]

[workspace.dependencies]
tokio = { version = "1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-middleware = { version = "0.4", default-features = false, features = ["json"] }
async-trait = "0.1"
http = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
bytes = "1"
url = "2"
secrecy = "0.10"
futures-util = "0.3"
futures-core = "0.3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
comfy-table = { version = "7", default-features = false }
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
typify = "0.4"
schemars = "0.8"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
is-terminal = "0.4"
insta = { version = "1", features = ["json"] }
tempfile = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# doc strings reference snake_case identifiers and bare URLs throughout
doc_markdown = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"

[profile.release]
lto = "thin"
codegen-units = 1

# insta's snapshot diffs run on every `cargo test`; compiling insta and
# its `similar` diff backend at -O3 even in dev/test profiles cuts the
# diff time on large snapshots from seconds to milliseconds. Only pays a
# one-time compile cost. Recommended in the insta docs.
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
