[package]
name = "ferro-protect-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line tool for the UniFi Protect local integration API."

[lib]
name = "ferro_protect_cli"
path = "src/lib.rs"

[[bin]]
name = "ferro-protect"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ferro-protect = { path = "../ferro-protect", version = "0.1.0", features = ["insecure-tls"] }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
comfy-table = { workspace = true }
is-terminal = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = { workspace = true }
tempfile = { workspace = true }
