[package]
name = "ferro-protect"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Async Rust client for the UniFi Protect local integration API (v6.2.83)."
build = "build.rs"

[lints]
workspace = true

[dependencies]
progenitor-client = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
progenitor = { workspace = true }
openapiv3 = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
