[package]
name = "ferro-protect"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Async Rust client for the UniFi Protect local integration API (v6.2.83)."
build = "build.rs"

[lints]
workspace = true

[features]
default = []
# Enables ProtectClient::builder().tls(TlsMode::AcceptInvalid). Off by
# default because it disables certificate validation; only useful for
# testing or for self-signed NVRs you cannot pin a cert for.
dangerous-tls = []

[dependencies]
reqwest = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
url = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
schemars = { workspace = true }
typify = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = { workspace = true }
secrecy = { workspace = true }
